전체 DB 값 초기화 기능 구현
최초 실행 시, 파이어베이스 모든 가게 정보 초기화

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     // **전체 DB 값 초기화
     for (var i = 0; i < markerInfot.length; i++) {
         alert(markerInfot[i]);
-        // firebase.database().ref(markerInfo[i].id).set({
-        //     // StoreName : markerInfo[i].StoreName,
-        //     bSelect : false
-        // });
+        firebase.database().ref(markerInfo[i].id).set({
+             StoreName : markerInfo[i].StoreName,
+             bSelect : false
+        });
     }
 
     // ** DB 읽어오기
